Order-Service/k8s/order-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: dc-project.com
      http:
        paths:
          - path: /inventory
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 80
